refactor: 모든 태그 관련 로직을 bookTag를 사용하도록 변경